@@ -31,11 +31,12 @@ module ActiveRecord
         #
         # * <tt>foreign_key</tt> - specifies the column name to use for track of the tree (default: parent_id)
         # * <tt>order</tt> - makes it possible to sort the children according to this SQL snippet.
+        # * <tt>counter_cache</tt> - keeps a count in a children_count column if set to true (default: false).
         def acts_as_tree(options = {})
-          configuration = { :foreign_key => "parent_id", :order => nil }
+          configuration = { :foreign_key => "parent_id", :order => nil, :counter_cache => nil }
           configuration.update(options) if options.is_a?(Hash)
           
-          belongs_to :parent, :class_name => name, :foreign_key => configuration[:foreign_key]
+          belongs_to :parent, :class_name => name, :foreign_key => configuration[:foreign_key], :counter_cache => configuration[:counter_cache]
           has_many :children, :class_name => name, :foreign_key => configuration[:foreign_key], :order => configuration[:order], :dependent => true
         end
       end
